# django-activeurl

./: .coveragerc  .gitignore  .landscape.yaml  .travis.yml  AUTHORS  CHANGES  CHANGES.rst  README.rst  pytest.ini  setup.cfg  setup.py  test_requirements.txt  tox.ini
django_activeurl/: __about__.py  __init__.py  conf.py  models.py  settings.py  utils.py
django_activeurl/ext/: __init__.py  django_jinja.py  flask_jinja.py  utils.py
django_activeurl/templatetags/: __init__.py  activeurl.py
docs/: Makefile  changes.rst  conf.py  history.rst  index.rst
docs/source/: conf.py  index.rst.default
example/: dev_requirements.txt  django_activeurl
example/example/: settings.py  urls.py  views.py  wsgi.py
example/simplepage/: admin.py  models.py  urls.py  views.py
example/simplepage/fixtures/: initial_data.json
example/simplepage/migrations/: 0001_initial.py
example/simplepage/templates/simplepage/: detail.html  list.html
example/skel/templates/skel/: index.html
tests/: __init__.py  jinja_config.py  test_activeurl.py  tests.py  urls.py  views.py
tests/templates/django/: django.html
tests/templates/jinja/: jinja.html
