[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
branch = True
omit = site-packages

[tool:pytest]
addopts = -s --keep-duplicates --cache-clear --verbose --no-cov-on-fail --cov=aiocassandra --cov-report=term --cov-report=html

[isort]
combine_as_imports= true
default_section = THIRDPARTY
include_trailing_comma = true
multi_line_output = 3
known_pytest = pytest,py
known_first_party = django_activeurl
split_before_closing_bracket = true
sections = FUTURE,STDLIB,PYTEST,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
line_length = 88
not_skip = __init__.py
